[workspace]
members = ["crates/*", "python"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
readme = "readme.md"
version = "0.2.2"
authors = ["Xavier Olive <git@xoolive.org>"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "xoolive/homebrew-homebrew"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to pass --all-features to cargo build
all-features = true
# Allow to edit the release.yml file (see Windows dependencies)
allow-dirty = ["ci"]

[workspace.metadata.dist.dependencies.apt]
libsoapysdr-dev = "*"
soapysdr-module-rtlsdr = "*"

[workspace.metadata.dist.dependencies.homebrew]
soapysdr = { stage = ["build", "run"] }
soapyrtlsdr = { stage = ["run"] }

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"

[profile.release]
lto = true
strip = true
overflow-checks = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
