[workspace]
members = ["crates/*", "python"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
readme = "readme.md"
version = "0.4.2"
authors = ["Xavier Olive <git@xoolive.org>"]
homepage = "https://github.com/xoolive/rs1090"
documentation = "https://crates.io/crates/rs1090"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[profile.release]
lto = true
strip = true
overflow-checks = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
