[package]
name = "rs1090-python"
description = "Python binding to rs1090, a library to decode Mode S and ADS-B signals"
repository = "https://github.com/xoolive/rs1090"
keywords = ["aircraft", "ADS-B", "Mode-S", "decoding"]
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
exclude = [
    "__pycache__",
    "**/__pycache__",
    "**/__pycache__/**",
    "*.pyc",
    "**/*.pyc"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
pyo3 = "0.23.3"
rayon = "1.9.0"
regex = "1.11.1"
rs1090 = { version= "0.4.2", path = "../crates/rs1090" }
serde-pickle = "1.2.0"
