[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rs1090"
description = "Python binding to rs1090 library to decode Mode S and ADS-B messages"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = ["msgpack>=1.0.8"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "rs1090._rust"
features = ["pyo3/extension-module"]


[project.optional-dependencies]
dev = [
  "mypy>=1.8.0",
  "pytest>=8.0.2",
  "ruff>=0.3.0", 
]

[project.urls]
repository = "https://github.com/xoolive/rs1090"

[dev-dependencies]
mypy = ">=1.8.0"
pytest = ">=8.0.2"
ruff = ">=0.3.0"
