[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rs1090"
requires-python = ">=3.9"
dependencies = ["pandas>=2.2.0"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "rs1090._rust"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.mypy]
python_version = 3.9
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[project.optional-dependencies]
dev = [
  "mypy>=1.8.0",
  "pytest>=8.0.2",
  "ruff>=0.3.0"
]

[project.urls]
repository = "https://github.com/xoolive/rs1090"
