[project]
name = "rs1090"
requires-python = ">=3.10"
dependencies = ["pandas>=2.2.0", "typing_extensions>=4.10.0"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/xoolive/jet1090"

[tool.maturin]
module-name = "rs1090._rust"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "mypy>=1.8.0", "pip", "pyarrow>=22.0.0", "pytest>=8.0.2", "ruff>=0.3.0"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.mypy]
python_version = "3.10"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--log-level=INFO --color=yes"

[build-system]
requires = ["maturin==1.10.2"]
build-backend = "maturin"
