[package]
name = "decode1090"
description = "Companion application to rs1090 to decode Mode S and ADS-B signals"
repository = "https://github.com/xoolive/rs1090"
keywords = ["aircraft", "ADS-B", "Mode-S", "decoding"]
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4.5.26", features = ["color", "derive", "wrap_help"] }
deku = "0.18.1"
futures-util = "0.3.31"
hex = "0.4.3"
rs1090 = { version = "0.4.4", path = "../rs1090" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }

[[bin]]
name = "decode1090"
path = "src/main.rs"
