[package]
name = "jet1090"
description = "A real-time comprehensive Mode S and ADS-B data decoder"
repository = "https://github.com/xoolive/rs1090"
keywords = ["aircraft", "ADS-B", "Mode-S", "decoding"]
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true

[features]
rtlsdr = ['rs1090/rtlsdr']
sero = ['rs1090/sero']
ssh = ['rs1090/ssh']

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.34", features = [ "color", "derive", "wrap_help", "env" ] }
clap_complete = "4.5.47"
clap_complete_nushell = "4.5.5"
crossterm = { version = "0.28.1", features = ["event-stream"] }
deku = "0.18.1"
dirs = "6.0.0"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
keepawake = "0.5.1"
ratatui = "0.29.0"
redis = { version = "0.29.2", features = ["tokio-comp"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [ "rustls-tls" ] }
rs1090 = { version = "0.4.10", path = "../rs1090" }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
soapysdr = { version = "0.4.1", optional = true }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.4"
warp = "0.3.6"
zip = "2.2.3"

[[bin]]
name = "jet1090"
path = "src/main.rs"
