[package]
name = "jet1090"
description = "A real-time comprehensive Mode S and ADS-B data decoder"
repository = "https://github.com/xoolive/rs1090"
keywords = ["aircraft", "ADS-B", "Mode-S", "decoding"]
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true

[features]
rtlsdr = ['rs1090/rtlsdr']
sero = ['rs1090/sero']
ssh = ['rs1090/ssh']

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = [
    "color",
    "derive",
    "wrap_help",
    "env",
] }
clap_complete = "4.5.61"
clap_complete_nushell = "4.5.10"
crossterm = { version = "0.29.0", features = ["event-stream"] }
deku = "0.18.1"
dirs = "6.0.0"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
keepawake = "0.5.1"
ratatui = "0.29.0"
redis = { version = "1.0.0", features = ["tokio-comp"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [ "rustls-tls" ] }
rs1090 = { version = "0.4.14", path = "../rs1090", features = ["aircraft"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
soapysdr = { version = "0.4.3", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
warp = "0.3.6"

[[bin]]
name = "jet1090"
path = "src/main.rs"
