[package]
name = "rs1090-wasm"
description = "A real-time comprehensive Mode S and ADS-B data decoder"
repository = "https://github.com/xoolive/rs1090"
keywords = ["aircraft", "ADS-B", "Mode-S", "decoding"]
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
hex = "0.4.3"
js-sys = "0.3.76"
rs1090 = { version = "0.4.14", path = "../rs1090" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.56"

[package.metadata.wasm-pack.profile.release]
# TODO check if this is still needed
# This had to be disabled for now, as it was causing issues with the
# wasm-bindgen version used in the project.
wasm-opt = false
