[package]
name = "rs1090"
description = "Rust library to decode Mode S and ADS-B signals"
repository = "https://github.com/xoolive/rs1090"
keywords = ["aircraft", "ADS-B", "Mode-S", "decoding"]
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[features]
rtlsdr = ['soapysdr']
sero = ['prost', 'tonic', 'dirs', 'reqwest']

[dependencies]
ansi_term = "0.12.1"
async-stream = "0.3.6"
deku = { version = "0.18.1", features = ["logging"] }
dirs = { version = "5.0.1", optional = true }
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
libm = "0.2.11"
log = "0.4.17"
num-complex = "0.4.5"
once_cell = "1.20.2"
prost = { version = "0.13.3", optional = true }
rayon = "1.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", optional = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
soapysdr = { version = "0.4.1", optional = true }
tonic = { version = "0.12.3", features = ["tls"], optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
hexlit = "0.5.5"

[[bench]]
name = "long_flight"
harness = false

[[example]]
name = "decode_basic"
path = "examples/basic.rs"
test = false

[[example]]
name = "decode_file"
path = "examples/flight.rs"
test = false

# [[example]]
# name = "tcas_incidents"

[[example]]
name = "airports"

[build-dependencies]
tonic-build = "0.12.3"
