[package]
name = "rs1090"
description = "Rust library to decode Mode S and ADS-B signals"
repository = "https://github.com/xoolive/rs1090"
keywords = ["aircraft", "ADS-B", "Mode-S", "decoding"]
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[features]
aircraft = ['dirs', 'reqwest', 'rusqlite', 'zip']
rtlsdr = ['soapysdr']
sero = ['prost', 'tonic', 'tonic-prost', 'dirs', 'reqwest']
ssh = [
  'async-recursion',
  'bytes',
  'dirs',
  'http',
  'hyper-util',
  'makiko',
  'ssh2-config',
  'tower',
]

[dependencies]
ansi_term = "0.12.1"
async-recursion = { version = "1.1.1", optional = true }
async-stream = "0.3.6"
bytes = { version = "1.10.1", optional = true }
deku = { version = "0.18.1", features = ["logging"] }
dirs = { version = "6.0.0", optional = true }
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
http = { version = "1.3.1", optional = true }
hyper-util = { version = "0.1.16", optional = true }
libm = "0.2.15"
log = "0.4.26"
makiko = { version = "0.2.5", optional = true }
num-complex = "0.4.5"
once_cell = "1.21.1"
prost = { version = "0.14.1", optional = true }
rayon = "1.11.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", optional = true, default-features = false, features = [ "rustls-tls" ] }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.143"
soapysdr = { version = "0.4.2", optional = true }
ssh2-config = { version = "0.6.0", optional = true }
tonic = { version = "0.14.2", features = ["_tls-any"], optional = true }
tonic-prost = { version = "0.14.2", optional = true }
tower = { version = "0.5.2", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zip = { version = "5.1.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.28.0"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.7.0"
hexlit = "0.5.5"

[[bench]]
name = "long_flight"
harness = false

[[example]]
name = "decode_basic"
path = "examples/basic.rs"
test = false

[[example]]
name = "decode_file"
path = "examples/flight.rs"
test = false

# [[example]]
# name = "tcas_incidents"

[[example]]
name = "airports"

[build-dependencies]
tonic-prost-build = "0.14.2"
